# hermes-agency

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_PLAYBOOK.md  LICENSE  MANIFEST.in  Makefile  README.md  bootstrap.sh  install.sh  pyproject.toml
_framework/: __init__.py  constants.py  invariants.yaml  manifest.py
_framework/agency_docs/: __init__.py  loader.py
_framework/audit/: __init__.py  audit_alignment.py
_framework/autonomy/: __init__.py  autonomy_db.py  autonomy_engine.py  autonomy_gate.sh  graduation_audit_gate.py
_framework/coaching/: __init__.py  coaching_db.py
_framework/cost/: __init__.py  cost_db.py  pricing.py
_framework/crm/: __init__.py  crm_db.py  reply_matcher.py
_framework/cron/: __init__.py  sync.py
_framework/finance/: __init__.py  computations.py  finance_db.py
_framework/goals/: __init__.py  goals_md.py  smart.py  three_layer.py  tracking.py
_framework/guardrails_loader/: __init__.py  loader.py
_framework/heartbeats/: __init__.py  heartbeats.py
_framework/hermes_engine/: __init__.py  detection.py  installer.py
_framework/hermes_patches/: __init__.py  _patch_base.py  apply.py  auto_reapply.py  skill_load_injection.py
_framework/integrations/: __init__.py  gmail.py  google_calendar.py  google_drive.py  signal.py  slack.py
_framework/kanban/: __init__.py  helpers.py  integration.py
_framework/learning/: __init__.py  compliance_report.py  correction_capture.py  embeddings.py  firings.py  learning_db.py  recapture_detector.py  rule_injection.py  tag_resolver.py
_framework/migration/: __init__.py  state_collapse.py  v7_full.py  v7_learning.py
_framework/ops/: __init__.py  auth.py  control_panel.py
_framework/ops/init/: __init__.py  _state_files.py  agent_personalization.py  tier2_flow.py  tier3_interview.py  wizard.py
_framework/per_subject_state/: __init__.py  store.py
_framework/prototyping/: __init__.py  ingest.py  iteration.py  style.py
_framework/quality/: __init__.py  quality_db.py  undelegation.py
_framework/runtime/: __init__.py  chat.py  prompt.py  provider.py
_framework/scaffolds/: __init__.py  scaffold_profile.py  scaffold_script.py  scaffold_skill.py
_framework/send_guard/: __init__.py  send_guard.py
_framework/sentinel/: __init__.py  events_db.py  monitors.py
_framework/skills/iteration-tracker/: SKILL.md
_framework/skills/prototype-from-example/: SKILL.md
_framework/skills/strategic-plan-health-check/: SKILL.md
_framework/skills/strategic-review-prep/: SKILL.md
_framework/skills_meta/: __init__.py  parser.py
_framework/state/: __init__.py  markdown_projector.py  state_files.py
_framework/strategic_health/: __init__.py  check.py
_framework/strategic_review/: __init__.py  prep.py
_framework/verifier/: __init__.py  registry.py  verifier.py
_framework/verifier/criterion_types/: __init__.py  fs_checks.py  http_checks.py  kanban_checks.py  learning_checks.py  shell_checks.py  sql_checks.py
docs/: ARCHITECTURE.md  AUTONOMY.md  DEPLOYMENT.md  HERMES_AGENCY_SPEC.md  INTEGRATIONS.md  LEARNING_LOOP.md  PATCHES_TO_HERMES.md  ROLES.md  SENTINEL.md  StrategicPlanning.md
docs/examples/minimal-deployment/: README.md  deployment.yaml
hermes_agency/: __init__.py  cli.py
hermes_agency_plugin/: __init__.py  commands.py  context.py  hooks.py  plugin.yaml  system_inventory.py
hermes_agency_plugin/setup/: __init__.py  interview.py  state.py  strategic_planning_context.py
templates/: SCRIPT.py.template  SKILL.md.template  deployment.yaml.template
templates/agency-vault/: Clients.md.template  Goals.md.template  Guardrails.md.template  Personal.md.template  README.md  Values.md.template  Work.md.template
templates/profiles/analyst-judge/: SOUL.md.template  standards.md.template
templates/profiles/analyst-judge/skills/_reference/: dossier-builder.md  graduation-check.md  hardware-research.md  learning-curation.md  prompt-injection-defense.md  red-team.md  research.md  shopping-research.md  verifier-criteria-author.md
templates/profiles/business-development/: SOUL.md.template  standards.md.template
templates/profiles/business-development/skills/_reference/: crm-sync.md  existing-client-commonality-analyzer.md  journalist-relationship.md  opportunistic-outreach.md  podcast-host-relationship.md  potential-clients-pipeline.md  prospect-research.md  referral-opportunity-scanner.md  weekly-opportunity-scan.md
templates/profiles/chief-of-staff/: SOUL.md.template  standards.md.template
templates/profiles/chief-of-staff/skills/_reference/: calendar-manager.md  draft-composer.md  (+14 more)
templates/profiles/finance/: SOUL.md.template  standards.md.template
templates/profiles/knowledge-base/: SOUL.md.template  standards.md.template
templates/profiles/system-sentinel/: SOUL.md.template  standards.md.template
templates/profiles/writing-support/: SOUL.md.template  standards.md.template
templates/scripts/: archive-enforcer.py  classification-enforcer.py  coach-method.py  find-candidates.py  follow-up-generator.py  hardware-watch.py  ingest-attachments.py  outreach-tracker.py  pipeline-watchdog.py  poll-inbox.py  system-health.py  transcribe-voice-memo.py  triage-batch.py
tests/: conftest.py
tests/audit/: test_audit_alignment.py
tests/e2e/: test_e2e_smoke.py
tests/seams/: test_agency_docs.py  test_agent_personalization.py  test_audit_strategic_alignment.py  test_autonomy.py  test_capture_goal_flag.py  test_coaching.py  test_control_panel.py  test_crm_and_state.py  test_cron_heartbeats_state.py  test_finance.py  test_gmail_integration.py  test_goal_tracking.py  test_goals.py  test_goals_three_layer.py  test_guardrails_loader.py  test_hermes_engine.py  test_hermes_patches.py  test_kanban_integration.py  test_learning_spine.py  test_manifest_validator.py  test_plugin.py  test_prototyping.py  test_quality_and_cost.py  test_runtime.py  test_send_guard.py  test_setup.py  test_signal_slack.py  test_skills_meta.py  test_state_collapse.py  test_strategic_health.py  test_strategic_review.py  test_tier2_flow.py  test_tier3_interview.py  test_v7_migration.py  test_verifier.py  test_wizard.py
(+34 files in other folders)
